kubernetes/worker-ubuntu22-04.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-ubuntu22-04
  namespace: buildbarn
  annotations:
    prometheus.io/port: "80"
    prometheus.io/scrape: "true"
spec:
  selector:
    matchLabels:
      app: worker
      instance: ubuntu22-04
  template:
    metadata:
      labels:
        app: worker
        instance: ubuntu22-04
    spec:
      nodeSelector:
        kubernetes.io/os: linux
        kubernetes.io/arch: amd64
      terminationGracePeriodSeconds: 300
      automountServiceAccountToken: false
      containers:
      - args:
        - /config/worker-ubuntu22-04.jsonnet
        image: ghcr.io/buildbarn/bb-worker:20230703T140711Z-7d7f8a9
        name: worker
        volumeMounts:
        - mountPath: /config/
          name: configs
          readOnly: true
        - mountPath: /worker
          name: worker
        - mountPath: /storage-cas
          name: storage-cas
        - mountPath: /storage-filepool
          name: storage-filepool
        - mountPath: /build
          name: fuse
          # Required to 'publish' the fuse mount to other containers (and host)
          mountPropagation: Bidirectional
          subPathExpr: $(POD_UID)
        - mountPath: /dev/fuse
          name: fusedev
        ports:
        - name: metrics
          containerPort: 9980
          protocol: TCP
        resources:
          requests:
            cpu: 1000m
            memory: 256Mi
            ephemeral-storage: 10Gi
        securityContext:
          # Required for mountPropagation=Bidirectional
          privileged: true
          capabilities:
            add:
              # For fuse mount()
              - SYS_ADMIN
        startupProbe:
          httpGet:
            path: /-/healthy
            port: 9980
          failureThreshold: 20
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /-/healthy
            port: 9980
      - command: [/bb/tini, -v, --, /bb/bb_runner, /config/runner-ubuntu22-04.jsonnet]
        image: ghcr.io/catthehacker/ubuntu:act-22.04@sha256:5f9c35c25db1d51a8ddaae5c0ba8d3c163c5e9a4a6cc97acd409ac7eae239448
        name: runner
        securityContext:
          runAsUser: 65534
          allowPrivilegeEscalation: false
        resources:
          requests:
            # Wildy unpredictable. Under-guesstimate cpu, over-guess
            # memory.  We ~want cpu to be best-effort and frequently
            # throttled. We still want to avoid oom crashes however.
            # TODO(gus): be able to spill into swap, rather than oom.
            cpu: 1000m
            memory: 3Gi
        volumeMounts:
        - mountPath: /config/
          name: configs
          readOnly: true
        - mountPath: /worker
          name: worker
        - mountPath: /bb
          name: bb-runner
          readOnly: true
        - mountPath: /build
          name: fuse
          subPathExpr: $(POD_UID)
          # Required to consume mounts that arrive after ns created
          mountPropagation: HostToContainer
      volumes:
      - name: bb-runner
        emptyDir: {}
      - name: configs
        projected:
          sources:
          - configMap:
              name: runner-ubuntu22-04
              items:
              - key: runner-ubuntu22-04.jsonnet
                path: runner-ubuntu22-04.jsonnet
          - configMap:
              name: worker-ubuntu22-04
              items:
              - key: worker-ubuntu22-04.jsonnet
                path: worker-ubuntu22-04.jsonnet
          - configMap:
              name: common
              items:
              - key: common.libsonnet
                path: common.libsonnet
      - emptyDir: {}
        name: worker
      - emptyDir: {}
        name: storage-cas
      - emptyDir: {}
        name: storage-filepool
      - name: fuse
        # https://github.com/kubernetes/kubernetes/issues/7890#issuecomment-1570824211
        # NB: currently we share this hostPath between all workers on the same node, and rely on
        # `subPathExpr: $(POD_UID)` to disambiguate.
        hostPath:
          path: /mnt/fuse
          type: DirectoryOrCreate
      - name: fusedev
        hostPath:
          path: /dev/fuse
          type: CharDevice
