kubernetes/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: buildbarn
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      nodeSelector:
        kubernetes.io/os: linux
        kubernetes.io/arch: amd64
      automountServiceAccountToken: false
      containers:
      - args:
        - /config/frontend.jsonnet
        image: buildbarn/bb-storage:20230208T220714Z-fd356c8
        name: storage
        resources:
          requests:
            cpu: 100m
            memory: 1Gi
        ports:
        - containerPort: 8980
          protocol: TCP
        - name: metrics
          containerPort: 9980
          protocol: TCP
        readinessProbe:
          grpc:
            service: readiness
            port: 8980
        volumeMounts:
        - mountPath: /config/
          name: configs
          readOnly: true
      volumes:
      - name: configs
        projected:
          sources:
          - configMap:
              name: frontend
              items:
              - key: frontend.jsonnet
                path: frontend.jsonnet
          - configMap:
              name: common
              items:
              - key: common.libsonnet
                path: common.libsonnet
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "80"
    prometheus.io/scrape: "true"
  name: frontend
  namespace: buildbarn
spec:
  ports:
  - port: 8980
    protocol: TCP
    name: grpc
  selector:
    app: frontend
