kubernetes/replicator-1-0-to-1-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: replicator-1-0-to-1-1
  namespace: buildbarn
spec:
  replicas: 2
  selector:
    matchLabels:
      app: replicator
      source: storage-1-0
      sink: storage-1-1
  template:
    metadata:
      labels:
        app: replicator
        source: storage-1-0
        sink: storage-1-1
    spec:
      nodeSelector:
        kubernetes.io/os: linux
        kubernetes.io/arch: amd64
      automountServiceAccountToken: false
      containers:
      - args:
        - /config/replicator.jsonnet
        image: buildbarn/bb-replicator:20230208T220714Z-fd356c8
        name: replicator
        resources:
          requests:
            cpu: 100m
            memory: 512Mi
        ports:
        - containerPort: 8984
          protocol: TCP
        - name: metrics
          containerPort: 9980
          protocol: TCP
        readinessProbe:
          grpc:
            service: readiness
            port: 8984
        volumeMounts:
        - mountPath: /config/
          name: configs
          readOnly: true
      volumes:
      - name: configs
        projected:
          sources:
          - configMap:
              name: replicator
              items:
              - key: replicator.jsonnet
                path: replicator.jsonnet
          - configMap:
              name: common
              items:
              - key: common.libsonnet
                path: common.libsonnet
---
apiVersion: v1
kind: Service
metadata:
  name: replicator-1-0-to-1-1
  namespace: buildbarn
  annotations:
    prometheus.io/port: "9980"
    prometheus.io/scrape: "true"
spec:
  ports:
  - port: 8984
    protocol: TCP
  selector:
    app: replicator
    source: storage-1-0
    sink: storage-1-1
