kubernetes/storage.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: storage
  namespace: buildbarn
spec:
  replicas: 2
  selector:
    matchLabels:
      app: storage
  serviceName: storage
  template:
    metadata:
      labels:
        app: storage
    spec:
      nodeSelector:
        kubernetes.io/os: linux
        kubernetes.io/arch: amd64
      containers:
      - args:
        - /config/storage.jsonnet
        image: buildbarn/bb-storage:20230208T220714Z-fd356c8
        name: storage
        resources:
          requests:
            cpu: 1000m
            memory: 1Gi
        ports:
        - containerPort: 8981
          protocol: TCP
        volumeMounts:
        - mountPath: /config/
          name: configs
          readOnly: true
        - mountPath: /storage-cas
          name: cas
        - mountPath: /storage-ac
          name: ac
      volumes:
      - name: configs
        projected:
          sources:
          - configMap:
              name: storage
              items:
              - key: storage.jsonnet
                path: storage.jsonnet
          - configMap:
              name: common
              items:
              - key: common.libsonnet
                path: common.libsonnet
  volumeClaimTemplates:
  - metadata:
      name: cas
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 12Gi
  - metadata:
      name: ac
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "80"
    prometheus.io/scrape: "true"
  name: storage
  namespace: buildbarn
spec:
  clusterIP: None
  ports:
  - port: 8981
    protocol: TCP
    name: grpc
  selector:
    app: storage
