kubernetes/browser.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: browser
  namespace: buildbarn
spec:
  replicas: 2
  selector:
    matchLabels:
      app: browser
  template:
    metadata:
      labels:
        app: browser
    spec:
      nodeSelector:
        kubernetes.io/os: linux
        kubernetes.io/arch: amd64
      automountServiceAccountToken: false
      containers:
      - image: ghcr.io/buildbarn/bb-browser:20230703T151441Z-ae419c7
        args:
        - /config/browser.jsonnet
        name: browser
        resources:
          requests:
            cpu: 10m
            memory: 512Mi
        ports:
        - containerPort: 7984
          protocol: TCP
        - name: metrics
          containerPort: 9980
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /
            port: 7984
        volumeMounts:
        - mountPath: /config/
          name: configs
          readOnly: true
      volumes:
      - name: configs
        projected:
          sources:
          - configMap:
              name: browser
              items:
              - key: browser.jsonnet
                path: browser.jsonnet
          - configMap:
              name: common
              items:
              - key: common.libsonnet
                path: common.libsonnet
---
apiVersion: v1
kind: Service
metadata:
  name: browser
  namespace: buildbarn
  annotations:
    prometheus.io/port: "80"
    prometheus.io/scrape: "true"
spec:
  ports:
  - port: 7984
    protocol: TCP
    name: http
  selector:
    app: browser
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: browser
  namespace: buildbarn
  annotations:
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/auth-type: cognito
    alb.ingress.kubernetes.io/auth-idp-cognito: __cognito_auth_idp__
    alb.ingress.kubernetes.io/auth-on-unauthenticated-request: authenticate
    alb.ingress.kubernetes.io/auth-scope: openid
    alb.ingress.kubernetes.io/auth-session-timeout: "3600"
    external-dns.alpha.kubernetes.io/hostname: bb-browser.%zone%
spec:
  rules:
  - host: bb-browser.%zone%
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: browser
            port:
              name: http
  tls:
  - hosts:
    - bb-browser.%zone%
